[project]
name = "ratchet"
version = "0.1.0"
description = "Agents that survive kill -9: a durable, queue-native runtime for AI agents."
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "mavrekc" }]
dependencies = [
    "pydantic>=2.7",
    "redis>=5.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
    "hypothesis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a running Redis (docker compose up -d redis)",
]
